[package]
name = "reactive-graph-config-model"
description = "Reactive Graph - Config - Model"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
readme = "../../../README.md"

[dependencies]
num_cpus = { workspace = true }
serde = { workspace = true, features = ["derive"] }

reactive-graph-remotes-model = { version = "0.10.0", path = "../../remotes/model" }

[lib]
crate-type = ["lib"]

[lints]
workspace = true
